--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 host_key_checking = False
+log_path = /var/jenkins_home/ansible.log
 
 [ssh_connection]
 ssh_args = -o ServerAliveInterval=3
