--- a/nginx/tasks/main.yml
+++ b/nginx/tasks/main.yml
@@ -1,14 +1,14 @@
 ---
 # tasks file for nginx
 
-#  - name: create a directory if it does not exist
-#    become: yes
-#    file:
-#      path: /var/nginx_con/
-#      state: directory
-#      mode: '0775'
-#      owner: ansible
-#      group: docker
+  - name: create a directory if it does not exist
+    become: yes
+    file:
+      path: /var/nginx_con/
+      state: directory
+      mode: '0775'
+      owner: ansible
+      group: docker
 
   - name: Install Nginx
     docker_container:
